# whisper

./: BUILDING.md  README.md  biome.json  index.html  package-lock.json  package.json
.agents/rules/: 2.md  3.md  4.md  project-rule.md
.cargo/: config.toml  macos-runner.sh
scripts/: setup-linux.sh  setup-windows.ps1
src/: App.css  App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  build.rs  fix.py  tauri.conf.json  test_rubato.rs  update_audio_log.py  update_audio_rs.py
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: inject-helper.js
src-tauri/src/: error.rs  lib.rs  main.rs  speech_test.rs
src-tauri/src/commands/: audio.rs  mod.rs  permissions.rs  shortcuts.rs  window.rs
src-tauri/src/services/: audio_service.rs  mod.rs  speech_service.rs
src/browser/: AIProviderRegistry.ts
src/components/: EmptyState.tsx  OnboardingOverlay.tsx
src/components/Browser/: BrowserView.css  BrowserView.tsx
src/features/browser/: index.ts
src/features/browser/components/: AudioBar.module.css  AudioBar.tsx  BrowserToolbar.module.css  BrowserToolbar.tsx  BrowserView.css  BrowserView.tsx  SessionControlBar.module.css  SessionControlBar.tsx  ShortcutManager.module.css  ShortcutModal.module.css  ShortcutModal.tsx  WaveformVisualizer.module.css  WaveformVisualizer.tsx
src/features/browser/hooks/: useAIInjection.ts  useAudioVolume.ts  useLiveTranscription.ts  useSpeechRecognition.ts  useSystemAudioDevice.ts
src/features/browser/utils/: injectionScript.ts
src/features/onboarding/: index.ts
src/features/onboarding/components/: LiveTest.tsx  OnboardingOverlay.module.css  OnboardingOverlay.tsx  ProofSection.tsx  ShortcutCaptureSection.tsx
src/features/onboarding/hooks/: useShortcutCapture.ts
src/features/overlay/: index.ts
src/features/settings/: index.ts
src/shared/services/: permissionsService.ts  windowService.ts
src/shared/stores/: appStore.ts
src/shared/types/: platform.ts  settings.ts
src/shared/utils/: audioDebug.ts  platform.ts  shortcutHelpers.ts
src/styles/: animations.css  bootstrap-partial.css  global.css  reset.css  tailwind.css  tokens.css
(+24 files in other folders)
