[package]
name = "whisper"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "whisper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "unstable"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-store = "2"
tauri-plugin-global-shortcut = "2"
url = "2"
thiserror = "2.0.18"
tauri-plugin-shell = "2.3.5"
cpal = "0.15.3"

tokio = { version = "1.52.3", features = ["full"] }

# macOS: exclude window from screen capture via NSWindowSharingNone
[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
cocoa = "0.26"

# Windows: exclude window from screen capture via SetWindowDisplayAffinity
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Media_Audio",
  "Win32_System_Com"
] }
